--- a/fitness/index.html
+++ b/fitness/index.html
@@ -5,31 +5,62 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<title>Forward Fitness Club</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
 	<div id="container">
 	<!-- Use the header area for the website name or logo-->
 	<header>
-		<a href="index.html"><img src="images/ffc_logo.png" alt="Forward Fitness Club logo" height="275" width="845"></a>
+		<a href="index.html"><img src="images/ffc_logo.png" alt="Forward Fitness Club logo"></a>
 	</header>
 	
 	<!-- Use the nav area to add hyperlinks to other pages within the website -->
 	<nav>
-		<a href="index.html">Home</a> &nbsp; &nbsp;
-		<a href="about.html">About Us</a> &nbsp; &nbsp;
-		<a href="class.html">Classes</a> &nbsp; &nbsp;
-		<a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
-		<a href="contact.html">Contact Us</a>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="class.html">Classes</a></li>
+			<li><a href="nutrition.html">Nutrition</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+		</ul>
 	</nav>
+	
+	<!-- Home Page Banner -->
+	<div id="banner" class="desktop">
+		<img src="images/homeBanner.jpg" alt="home banner image">
+	</div>
 	
 	<!-- Use the main area to add the main content of the page -->
 	<main>
 		<p>Welcome to Forward Fitness Club. Our mission is to help clients meet their fitness and nutrition goals.</p>
 		
-		<p>If you have struggled with getting healthy and need the motivation and resources to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-art equipment, convenient group training classes, and nutrition tips and information to keep you healthy.</p>
+		<div class="mobile">
+			<h3>FREE One-Week Trial Membership!</h3>
+			<p><a href="tel: +18145559608">Call Us Today to Get Started</a></p>
+			
+			<h4>Fitness Club Hours:</h4>
+			<p>Monday - Thursday: 6:00am - 6:00 pm<br/>
+			Friday: 6:00am - 4:00pm<br/>
+			Saturday: 8:00am - 6:00pm<br/>
+			Sunday: Closed</p>
+		</div> <!-- ends mobile class -->
 		
-		<p>We provide a FREE, one-week membership to experience the benefits of our equipment and facility. This one-week trial gives you complete access to our equipment, training classes, and nutrition planning. Contact us today to start your free trial!</p>
+		<div class="desktop">
+		
+			<p>If you have struggled with getting healthy and need the motivation and resources to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-art equipment, convenient group training classes, and nutrition tips and information to keep you healthy.</p>
+			
+			<p>We provide a FREE, one-week membership to experience the benefits of our equipment and facility. This one-week trial gives you complete access to our equipment, training classes, and nutrition planning. Contact us today to start your free trial!</p>
+		
+		<h1>Start Today!</h1>
+		
+		<figure>
+			<a href="class.html"><img src="images/group.jpg" alt="group fitness"></a>
+			<a href="nutrition.html"><img src="images/nutrition.jpg" alt="good nutrition"></a>
+			<a href="contact.html"><img src="images/signup.jpg" alt="sign up icon"></a>
+		</figure>
+		
+		</div> <!-- end desktop class -->
 	</main>
 	
 	<!-- Use the footer area to add the footer content -->
